--- a/mapGallery.html
+++ b/mapGallery.html
@@ -105,7 +105,8 @@
 													</a>
 													<ul class="dropdown-menu">
 														<li>
-															<a href="#" id="esriTopo"><i class="fa fa-check" aria-hidden="true"></i> esriTopo</a>
+															<a href="#" id="esriTopo">
+																<i class="fa fa-check" aria-hidden="true"></i> esriTopo</a>
 														</li>
 														<li>
 															<a href="#" id="esriDarkGray">esriDarkGray</a>
@@ -125,32 +126,44 @@
 													</a>
 													<ul class="dropdown-menu">
 														<li>
-															<a href="#" id="tree-btn"><i class="fa fa-circle" aria-hidden="true"></i> Columbus Tree Map</a>
+															<a href="#" id="tree-btn">
+																<i class="fa fa-circle" aria-hidden="true"></i> Columbus Tree Map</a>
 														</li>
 														<li>
-															<a href="#" id="ohio-btn"><i class="fa fa-circle" aria-hidden="true"></i> Ohio Outline</a>
+															<a href="#" id="ohio-btn">
+																<i class="fa fa-circle" aria-hidden="true"></i> Ohio Outline</a>
 														</li>
 														<li>
-															<a href="#" id="bikepath-btn"><i class="fa fa-circle" aria-hidden="true"></i> Bike Paths in Central Ohio</a>
+															<a href="#" id="bikepath-btn">
+																<i class="fa fa-circle" aria-hidden="true"></i> Bike Paths in Central Ohio</a>
 														</li>
 														<li>
-															<a href="#" id="sewer-btn"><i class="fa fa-circle" aria-hidden="true"></i> Sewer Overflow Discharges</a>
+															<a href="#" id="sewer-btn">
+																<i class="fa fa-circle" aria-hidden="true"></i> Sewer Overflow Discharges</a>
 														</li>
 														<li>
-															<a href="#" id="homeown-btn"><i class="fa fa-circle" aria-hidden="true"></i> Home Ownership</a>
+															<a href="#" id="homeown-btn">
+																<i class="fa fa-circle" aria-hidden="true"></i> Home Ownership</a>
 														</li>
 														<li>
-															<a href="#" id="bikeshr-btn"><i class="fa fa-circle" aria-hidden="true"></i> Bike Sharing Stations</a>
+															<a href="#" id="bikeshr-btn">
+																<i class="fa fa-circle" aria-hidden="true"></i> Bike Sharing Stations</a>
 														</li>
 														<li>
-															<a id="morelayer-btn"><i class="fa fa-question-circle-o" aria-hidden="true"></i> More layers…</a>
+															<a href="#" id="gas-btn">
+																<i class="fa fa-circle" aria-hidden="true"></i> Columbus Gas Prices</a>
+															</a>
+														</li>
+														<li>
+															<a href="#" id="morelayer-btn">
+																<i class="fa fa-wrench" aria-hidden="true"></i> More layers…</a>
 														</li>
 													</ul>
 												</li>
-												
+
 												<li>
-															<a href="#" id="removeall-btn">Remove All Layers</a>
-														</li>
+													<a href="#" id="removeall-btn">Remove All Layers</a>
+												</li>
 											</ul>
 										</div>
 									</li>
@@ -255,7 +268,7 @@
 
 	<!-- modals -->
 	<!--aboutModal-->
-	<div class="modal fade" id="aboutModal" tabindex="-1" role="dialog">
+	<div class="modal fade" id="about-modal" tabindex="-1" role="dialog">
 		<div class="modal-dialog modal-lg">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -343,7 +356,7 @@
 	</div>
 	<!-- /.modal -->
 
-	<div class="modal fade" id="metaModal" tabindex="-1" role="dialog">
+	<div class="modal fade" id="meta-modal" tabindex="-1" role="dialog">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -352,27 +365,6 @@
 						Developed by
 						<a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>Luyu Liu</a>
 					</h4>
-				</div>
-				<div class="modal-body">
-					<div id="attribution"></div>
-				</div>
-			</div>
-			<!-- /.modal-content -->
-		</div>
-		<!-- /.modal-dialog -->
-	</div>
-	<!-- /.modal -->
-	
-	<div class="modal fade" id="rickrollModal" tabindex="-1" role="dialog">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button class="close" type="button" data-dismiss="modal" aria-hidden="true">&times;</button>
-					<h4 class="modal-title">
-						Developed by
-						<a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>Luyu Liu</a>
-					</h4>
-					<div id="rickrollBox"></div>
 				</div>
 				<div class="modal-body">
 					<div id="attribution"></div>
@@ -384,22 +376,78 @@
 	</div>
 	<!-- /.modal -->
 
-	<div id="mm" class="easyui-menu" style="width:120px;">
-		<div onclick="javascript:alert('new')">New</div>
-		<div>
-			<span>Open</span>
-			<div style="width:150px;">
-				<div>
-					<b>Word</b>
+	<div class="modal fade" id="rickroll-modal" tabindex="-1" role="dialog">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button class="close" type="button" data-dismiss="modal" aria-hidden="true">&times;</button>
+					<h4 class="modal-title">
+						Developed by
+						<a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>Luyu Liu</a>
+					</h4>
+					<div id="rickroll-box"></div>
 				</div>
-				<div>Excel</div>
-				<div>PowerPoint</div>
+				<div class="modal-body">
+					<div id="attribution"></div>
+				</div>
 			</div>
+			<!-- /.modal-content -->
 		</div>
-		<div icon="icon-save">Save</div>
-		<div class="menu-sep"></div>
-		<div>Exit</div>
+		<!-- /.modal-dialog -->
 	</div>
+	<!-- /.modal -->
+
+	<div class="modal fade" id="more-modal" tabindex="-1" role="dialog">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button class="close" type="button" data-dismiss="modal" aria-hidden="true">&times;</button>
+					<h4 class="modal-title">
+						New Layer Setting
+					</h4>
+				</div>
+				<div class="modal-body">
+					<ul id="input-collection">
+						<li>
+							Layer Name:
+							<input class="form-control" id="name-input" type="text">
+						</li>
+						<li>
+							URL:
+							<input class="form-control" id="url-input" type="text">
+						</li>
+						<li>
+							Geometry type:
+							<select class="form-control" id="geotype-input">
+								<option>Points features</option>
+								<option>Polylines features</option>
+								<option>Polygons features</option>
+								<option>Raster layer</option>
+							</select>
+						</li>
+						<li>
+							Symbology:
+							<select class="form-control" id="symbol-input">
+								<option>1</option>
+								<option>2</option>
+								<option>3</option>
+								<option>4</option>
+							</select>
+						</li>
+					</ul>
+
+
+				</div>
+				<div class="modal-footer">
+					<button type="button" data-dismiss="modal" class="btn btn-default">Close</button>
+					<button type="button" id="confirm-btn" class="btn btn-primary">Save changes</button>
+				</div>
+			</div>
+			<!-- /.modal-content -->
+		</div>
+		<!-- /.modal-dialog -->
+	</div>
+	<!-- /.modal -->
 
 
 	<!-- app.js -->
