--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 	<!-- Load css-->
 	<link rel="stylesheet" href="./css/leaflet.awesome-markers.css">
 	<link rel="stylesheet" href="./css/awesome-bootstrap-checkbox.css">
+	<link rel="stylesheet" href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css">
 	<link rel="stylesheet" href="./css/bootstrap.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css">
@@ -128,10 +129,6 @@
 														<li>
 															<a href="#" id="tree-btn">
 																<i class="fa fa-circle" aria-hidden="true"></i> Columbus Tree Map</a>
-														</li>
-														<li>
-															<a href="#" id="ohio-btn">
-																<i class="fa fa-circle" aria-hidden="true"></i> Ohio Outline</a>
 														</li>
 														<li>
 															<a href="#" id="bikepath-btn">
@@ -363,7 +360,7 @@
 					<button class="close" type="button" data-dismiss="modal" aria-hidden="true">&times;</button>
 					<h4 class="modal-title">
 						Developed by
-						<a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>Luyu Liu</a>
+						<a href='https://github.com/luyuliu'>Luyu Liu</a>
 					</h4>
 				</div>
 				<div class="modal-body">
@@ -383,7 +380,7 @@
 					<button class="close" type="button" data-dismiss="modal" aria-hidden="true">&times;</button>
 					<h4 class="modal-title">
 						Developed by
-						<a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>Luyu Liu</a>
+						<a href='https://github.com/luyuliu'>Luyu Liu</a>
 					</h4>
 					<div id="rickroll-box"></div>
 				</div>
@@ -421,35 +418,26 @@
 							<select class="form-control" id="datatype-input">
 								<option>JSON Points</option>
 								<option>JSON Polylines/Polygons</option>
-								<option>Geo Server</option>
+								<option>GeoServer tiles</option>
 								<option>More...</option>
 							</select>
 						</li>
 						<li>
-								Ajax Method:
-								<select class="form-control" id="jsonp-input">
-										<option>JSON</option>
-										<option>JSONP(format_options=callback:getjson)</option>
-									</select>
-							</li>
-						<li>
-								URL:
-								<input class="form-control" id="url-input" type="text">
-							</li>
-						<li>
-							Geo Server Data Enter Type:
-							<select class="form-control" id="featuretype-input" title="Select the way to enter the map">
-								<option>esri.feature</option>
-								<option>esri.tile</option>
-							</select>
+							Symbology:
+							<input class="form-control" id="symbol-input" type="text">
 						</li>
 						<li>
-							Symbology:
-							<select class="form-control" id="symbol-input">
-								<option>1</option>
-								<option>2</option>
-								<option>3</option>
-								<option>4</option>
+							Color:
+							<select class="form-control" id="color-palette">
+								<option>red</option>
+								<option>darkred</option>
+								<option>orange</option>
+								<option>green</option>
+								<option>darkgreen</option>
+								<option>blue</option>
+								<option>purple</option>
+								<option>darkpuple</option>
+								<option>cadetblue</option>
 							</select>
 						</li>
 					</ul>
@@ -458,7 +446,7 @@
 				</div>
 				<div class="modal-footer">
 					<button type="button" data-dismiss="modal" class="btn btn-default">Close</button>
-					<button type="button" id="confirm-btn" class="btn btn-primary">Save changes</button>
+					<button type="button" id="confirm-btn" class="btn btn-primary">Add layer</button>
 				</div>
 			</div>
 			<!-- /.modal-content -->
