--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
 											</button>
 											<ul class="dropdown-menu">
 												<li>
-													<a href="#" id="test-btn">Under Construction...</a>
+													<a href="#" id="openlegend-btn">Open legend</a>
+													<a href="#" id="closelegend-btn">Close legend</a>
 												</li>
 											</ul>
 										</div>
