--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
 															</a>
 														</li>
 														<li>
-																<a href="#" id="gas-btn">
-																	<i class="fa fa-circle" aria-hidden="true"></i> Water Pollution</a>
-																</a>
-															</li>
+															<a href="#" id="water-btn">
+																<i class="fa fa-circle" aria-hidden="true"></i> Water Pollution</a>
+															</a>
+														</li>
 														<li>
 															<a href="#" id="morelayer-btn">
 																<i class="fa fa-wrench" aria-hidden="true"></i> More layers…</a>
