--- a/index.html
+++ b/index.html
@@ -99,12 +99,14 @@
 								<ul class="list-group" id="controlList" style="padding:0">
 									<li class="list-group-item">
 										<div class="dropdown">
-											<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"><i class="fa fa-cogs" aria-hidden="true"></i> Layer Settings
+											<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
+												<i class="fa fa-cogs" aria-hidden="true"></i> Layer Settings
 												<span class="caret"></span>
 											</button>
 											<ul class="dropdown-menu">
 												<li class="dropdown-submenu">
-													<a class="test" tabindex="-1" href="#"><i class="fa fa-map" aria-hidden="true"></i> Select basemap
+													<a class="test" tabindex="-1" href="#">
+														<i class="fa fa-map" aria-hidden="true"></i> Select basemap
 														<span class="caret"></span>
 													</a>
 													<ul class="dropdown-menu">
@@ -124,10 +126,12 @@
 													</ul>
 												</li>
 												<li>
-													<a href="#" id="removeall-btn"><i class="fa fa-ban" aria-hidden="true"></i> Uncheck all layers</a>
+													<a href="#" id="removeall-btn">
+														<i class="fa fa-ban" aria-hidden="true"></i> Uncheck all layers</a>
 												</li>
 												<li>
-													<a href="#" id="openall-btn"><i class="fa fa-hand-spock-o" aria-hidden="true"></i> Open all layers</a>
+													<a href="#" id="openall-btn">
+														<i class="fa fa-hand-spock-o" aria-hidden="true"></i> Open all layers</a>
 												</li>
 											</ul>
 										</div>
@@ -135,21 +139,30 @@
 
 									<li class="list-group-item">
 										<div class="dropdown">
-											<button class="btn btn-default dropdown-toggle" title="Add default layers and other layers" type="button" data-toggle="dropdown"><i class="fa fa-binoculars" aria-hidden="true"></i> Sorting Layers
+											<button class="btn btn-default dropdown-toggle" title="Add default layers and other layers" type="button" data-toggle="dropdown">
+												<i class="fa fa-binoculars" aria-hidden="true"></i> Sorting Layers
 												<span class="caret"></span>
 											</button>
 											<ul class="dropdown-menu">
 												<li>
-													<a href="#" id="topchecked-btn"><i class="fa fa-thumbs-up" aria-hidden="true"></i> Top selected layers</a>
+													<a href="#" id="pinchecked-btn">
+															<i class="fa fa-paperclip" aria-hidden="true"></i> Top selected layers</a>
 												</li>
 												<li>
-													<a href="#" id="alphabet-btn"><i class="fa fa-sort-alpha-asc" aria-hidden="true"></i> Sort layers Alphabetically</a>
+													<a href="#" id="topchecked-btn">
+														<i class="fa fa-thumbs-up" aria-hidden="true"></i> Top selected layers</a>
 												</li>
 												<li>
-													<a href="#" id="categorize-btn"><i class="fa fa-tags" aria-hidden="true"></i> Categorize layers</a>
+													<a href="#" id="alphabet-btn">
+														<i class="fa fa-sort-alpha-asc" aria-hidden="true"></i> Sort layers Alphabetically</a>
 												</li>
 												<li>
-													<a href="#" id="gissorting-btn"><i class="fa fa-sort-amount-asc" aria-hidden="true"></i> GIS sorting</a>
+													<a href="#" id="categorize-btn">
+														<i class="fa fa-tags" aria-hidden="true"></i> Categorize layers</a>
+												</li>
+												<li>
+													<a href="#" id="gissorting-btn">
+														<i class="fa fa-sort-amount-asc" aria-hidden="true"></i> GIS sorting</a>
 												</li>
 											</ul>
 										</div>
@@ -201,20 +214,20 @@
 								</div>
 							</div>
 							<div id="table-wrapper" style="overflow:scroll;height:80px;width:100%;overflow:auto">
-							<table class="table table-hover" id="feature-list">
-								<thead class="hidden">
-									<tr>
-										<th>Icon</th>
+								<table class="table table-hover" id="feature-list">
+									<thead class="hidden">
 										<tr>
+											<th>Icon</th>
 											<tr>
-												<th>Name</th>
 												<tr>
+													<th>Name</th>
 													<tr>
-														<th>Chevron</th>
 														<tr>
-								</thead>
-								<tbody id="POI-list" class="list"></tbody>
-							</table>
+															<th>Chevron</th>
+															<tr>
+									</thead>
+									<tbody id="POI-list" class="list"></tbody>
+								</table>
 							</div>>
 
 						</div>
