--- a/index.html
+++ b/index.html
@@ -145,20 +145,16 @@
 											</button>
 											<ul class="dropdown-menu">
 												<li>
-													<a href="#" id="pinchecked-btn">
-															<i class="fa fa-paperclip" aria-hidden="true"></i> Top selected layers</a>
-												</li>
-												<li>
 													<a href="#" id="topchecked-btn">
 														<i class="fa fa-thumbs-up" aria-hidden="true"></i> Top selected layers</a>
 												</li>
 												<li>
 													<a href="#" id="alphabet-btn">
-														<i class="fa fa-sort-alpha-asc" aria-hidden="true"></i> Sort layers Alphabetically</a>
+														<i class="fa fa-sort-alpha-asc" aria-hidden="true"></i> Alphabetical sorting</a>
 												</li>
 												<li>
 													<a href="#" id="categorize-btn">
-														<i class="fa fa-tags" aria-hidden="true"></i> Categorize layers</a>
+														<i class="fa fa-tags" aria-hidden="true"></i> Categories sorting</a>
 												</li>
 												<li>
 													<a href="#" id="gissorting-btn">
@@ -180,10 +176,10 @@
 						<div class="panel-heading" role="tab" id="headingOne1" style="margin:0">
 							<a class="panel-title" data-toggle="collapse" data-parent="#accordion" href="#collapseOne1" aria-expanded="true" aria-controls="collapseOne1">Layer Control
 							</a>
-
+							<div class="pull-right" style="vertical-align:middle;"><input class="form-check-input" id="pin-checkbox" type="checkbox" style="vertical-align:middle;" value="">Pin checked</div>
 
 						</div>
-
+						
 
 						<div id="collapseOne1" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne1" style="margin:0">
 							<div class="panel-body" style="padding:0;margin:0">
