--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 												<i class="fa fa-binoculars" aria-hidden="true"></i> Sorting Layers
 												<span class="caret"></span>
 											</button>
-											<ul class="dropdown-menu">]
+											<ul class="dropdown-menu">
 												<li>
 													<a href="#" id="alphabet-btn">
 														<i class="fa fa-sort-alpha-asc" aria-hidden="true"></i> Alphabetical sorting</a>
