--- a/index.html
+++ b/index.html
@@ -331,6 +331,28 @@
 					<h4 class="modal-title">Layer Metadata</h4>
 				</div>
 				<div class="modal-body" id="meta-content">
+					<ul class="nav nav-tabs nav-justified" id="aboutTabs">
+						<li class="active">
+							<a href="#left" data-toggle="tab" aria-expanded="true">
+								<i class="fa fa-question-circle"></i>&nbsp;About the Layer</a>
+						</li>
+						<li class="">
+							<a href="#right" data-toggle="tab" aria-expanded="false">
+								<i class="fa fa-globe"></i>&nbsp;Metadata </a>
+						</li>
+
+						<div class="tab-content" id="about-tabs-content">
+							<div class="tab-pane fade active in" id="left">
+							</div>
+
+							<div id="right" class="tab-pane fade">
+							</div>
+
+
+						</div>
+					</ul>
+
+
 				</div>
 			</div>
 			<!-- /.modal-content -->
