--- a/index.html
+++ b/index.html
@@ -238,17 +238,17 @@
 		</div>
 		<div id="map">
 
-			<div id="loading" style="display: none;">
-				<div class="loading-indicator">
-					<div class="progress progress-striped active">
-						<div class="progress-bar progress-bar-info progress-bar-full"></div>
-					</div>
-				</div>
-			</div>
 
 		</div>
 	</div>
 
+	<div id="loading" style="display:inline;">
+		<div class="loading-indicator">
+		  <div class="progress progress-striped active">
+			<div class="progress-bar progress-bar-info progress-bar-full"></div>
+		  </div>
+		</div>
+	  </div>
 	<!-- modals -->
 	<!--about-modal-->
 	<div class="modal fade" id="about-modal" tabindex="-1" role="dialog">
