--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
 	<!-- scrollbar.js -->
 	<script src="./js/simplebar.js"></script>
 
+	<!-- Proj4 -->
+	<script src="https://unpkg.com/proj4@2.4.3"></script>
+	<script src="https://unpkg.com/proj4leaflet@1.0.1"></script>
+
 	<!-- Load css-->
 	<link rel="stylesheet" href="./css/simplebar.css">
 	<link rel="stylesheet" href="./css/leaflet.awesome-markers.css">
