--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
 	<script src="./js/leaflet.markercluster-src.js"></script>
 
 	<!-- list.js -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/1.1.1/list.min.js"></script>
-
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/typeahead.js/0.10.5/typeahead.bundle.min.js"></script>
+	<script src="./js/list.min.js"></script>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.3/handlebars.min.js"></script>
 
@@ -47,10 +45,6 @@
 
 	<!-- scrollbar.js -->
 	<script src="./js/simplebar.js"></script>
-
-	<!-- Proj4 -->
-	<script src="https://unpkg.com/proj4@2.4.3"></script>
-	<script src="https://unpkg.com/proj4leaflet@1.0.1"></script>
 
 	<!-- Load css-->
 	<link rel="stylesheet" href="./css/simplebar.css">
@@ -197,7 +191,7 @@
 							<a class="panel-title" data-toggle="collapse" data-parent="#accordion" href="#collapseOne2" aria-expanded="true" aria-controls="collapseOne2">POI List
 							</a>
 						</div>
-						<div id="collapseOne2" class="panel-collapse collapse collapse" role="tabpanel" aria-labelledby="headingOne2" style="margin:0">
+						<div id="collapseOne2" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne2" style="margin:0">
 
 							<div class="panel-body">
 								<div class="row">
