--- a/index.html
+++ b/index.html
@@ -127,10 +127,9 @@
 													<a href="#" id="removeall-btn">
 														<i class="fa fa-ban" aria-hidden="true"></i> Uncheck all layers</a>
 												</li>
-												<li>
-													<a href="#" id="morelayer-btn">
-														<i class="fa fa-folder-open" aria-hidden="true"></i> Add more layers</a>
-												</li>
+
+												<!-- <li><a href="#" id="morelayer-btn"><i class="fa fa-folder-open" aria-hidden="true"></i> Add more layers</a></li>-->
+
 											</ul>
 										</div>
 									</li>
