--- a/index.html
+++ b/index.html
@@ -189,7 +189,10 @@
 						<div class="panel-heading" role="tab" id="headingOne1" style="margin:0">
 							<a class="panel-title" data-toggle="collapse" data-parent="#accordion" href="#collapseOne2" aria-expanded="true" aria-controls="collapseOne2">POI List
 							</a>
+							<div class="pull-right" style="vertical-align:middle;" title="Check it if you want the POI list always shows up. (May result in slow performance)">
+								<input class="form-check-input" id="leveled-checkbox" type="checkbox" style="vertical-align:middle;" value="">Always show</div>
 						</div>
+						
 						<div id="collapseOne2" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne2" style="margin:0">
 
 							<div class="panel-body">
