Multiple custom layer fix & legend minor fix

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 										<option>darkgreen</option>
 										<option>blue</option>
 										<option>purple</option>
-										<option>darkpuple</option>
+										<option>darkpurple</option>
 										<option>cadetblue</option>
 									</select>
 								</li>
