--- a/index.html
+++ b/index.html
@@ -46,8 +46,12 @@
 	<!-- tour.js -->
 	<script src="./js/bootstrap-tour.min.js"></script>
 
+	<!-- bootstrap-toggle.min.js -->
+	<script src="./js/bootstrap-toggle.min.js"></script>
+
 
 	<!-- Load css-->
+	<link rel="stylesheet" href="./css/bootstrap-toggle.min.css" />
 	<link rel="stylesheet" href="./css/leaflet.css" />
 	<link rel="stylesheet" href="./css/simplebar.css">
 	<link rel="stylesheet" href="./css/bootstrap-tour.min.css">
@@ -174,12 +178,12 @@
 
 					</div>
 					<div class="panel panel-default" style="margin:0">
-						<div class="panel-heading" role="tab" id="headingOne1" style="margin:0">
+						<div class="panel-heading" role="tab" id="headingOne1">
 							<a class="panel-title" data-toggle="collapse" data-parent="#accordion" href="#collapseOne1" aria-expanded="true" aria-controls="collapseOne1">Layer Control
 							</a>
-							<div class="pull-right" style="vertical-align:middle;">
-								<input class="form-check-input" id="pin-checkbox" type="checkbox" style="vertical-align:middle;" value="">Pin checked</div>
-
+							<div class="pull-right" style="margin-top:-5px;margin-right:-10px">
+								<input type="checkbox" id="pin-checkbox" unchecked data-toggle="toggle" data-width="100" data-height="10" data-on="Topped" data-off="Untopped"></div>
+								
 						</div>
 
 
@@ -197,9 +201,9 @@
 						<div class="panel-heading" role="tab" id="headingOne2" style="margin:0">
 							<a class="panel-title" data-toggle="collapse" data-parent="#accordion" href="#collapseOne2" aria-expanded="true" aria-controls="collapseOne2">POI List
 							</a>
-							<div class="pull-right" style="vertical-align:middle;" title="Check it if you want the POI list always shows up. (May result in slow performance)">
-								<input class="form-check-input" id="leveled-checkbox" type="checkbox" style="vertical-align:middle;" value="">Always show</div>
-						</div>
+							<div class="pull-right" style="vertical-align:middle;margin-top:-5px;margin-right:-10px" title="Check it if you want the POI list always shows up. (May result in slow performance)">
+								<input type="checkbox" id="leveled-checkbox" unchecked data-toggle="toggle" data-width="130" data-height="10" data-on="Always show" data-off="Show at closest"></div>
+							</div>
 
 						<div id="collapseOne2" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne2" style="margin:0">
 
