--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 					<div class="panel panel-default" style="margin:0">
 						<div class="panel-heading" role="tab" id="headingOne0" style="margin:0">
 							<a class="panel-title" id="map-adm-title" data-toggle="collapse" data-parent="#accordion" href="#collapseOne0" aria-expanded="true"
-							    aria-controls="collapseOne0">Map Administration
+							    aria-controls="collapseOne0">Section Settings
 								<button type="button" class="btn btn-xs btn-default pull-right" title="Click to hide sidebar" id="sidebar-hide-btn">
 									<i class="fa fa-chevron-left"></i>
 								</button>
